--- a/settings/project.json
+++ b/settings/project.json
@@ -1,3 +1,50 @@
 {
-  "start-scene": "796794cb-1921-4fce-ac7c-7f617a217920"
+  "start-scene": "796794cb-1921-4fce-ac7c-7f617a217920",
+  "last-module-event-record-time": 1748236044706,
+  "group-list": [
+    "default",
+    "Player",
+    "Platform"
+  ],
+  "collision-matrix": [
+    [
+      true
+    ],
+    [
+      false,
+      false,
+      true
+    ],
+    [
+      false,
+      true,
+      false
+    ]
+  ],
+  "excluded-modules": [
+    "3D Physics/Builtin"
+  ],
+  "preview-port": 7456,
+  "design-resolution-width": 960,
+  "design-resolution-height": 640,
+  "fit-width": false,
+  "fit-height": true,
+  "use-project-simulator-setting": false,
+  "simulator-orientation": false,
+  "use-customize-simulator": true,
+  "simulator-resolution": {
+    "width": 960,
+    "height": 640
+  },
+  "clear-simulator-cache": true,
+  "facebook": {
+    "enable": false,
+    "appID": "",
+    "live": {
+      "enable": false
+    },
+    "audience": {
+      "enable": false
+    }
+  }
 }
